# lakehouse

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: settings.yaml
kafka/: Dockerfile  create-topics.sh
spark/: Dockerfile
src/generators/: generate_machine_events.py  generate_machines.py
src/jobs/bronze/: ingest_machine_events.py
src/jobs/gold/: aggregate_machine_kpis.py  gold_aggregate.py
src/jobs/silver/: silver_transform.py  transform_machine_events.py
src/utils/: spark_session.py
