[project]
name = "lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deltalake>=1.2.1",
    "dotenv>=0.9.9",
    "duckdb>=1.4.1",
    "faker>=37.12.0",
    "kafka>=1.3.5",
    "kafka-python>=2.2.15",
    "pandas>=2.3.3",
]
